@@ -6,6 +6,7 @@
   Changed name and location of log file
 	%USERPROFILE%\Local Settings\Application Data\mRemoteNG\mRemoteNG.log
   Changed filename delimiter in title bar from pipe to dash
+  Changed default format for saving screenshot images to PNG
 
 1.50:
   Added the following formats to the "Save Connections As" function:
